# InterconnectSimulator

./: .gitignore  Makefile  diagram.puml  main.cpp
InstructionsFile/: InstructionsP1.txt  InstructionsP2.txt  InstructionsP3.txt  InstructionsP4.txt  InstructionsP5.txt  InstructionsP6.txt  InstructionsP7.txt  InstructionsP8.txt
SimInter/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  memorychange.cpp  memorychange.h  slotinvalidated.cpp  slotinvalidated.h  slotslist.cpp  slotslist.h  stepchanges.cpp  stepchanges.h
SimInter/Processor/headers/: Instruction.h  InstructionList.h  InstructionMemory.h  Interconnect.h  List.h  ListNode.h  Processor.h  ProcessorController.h  SharedMemory.h
SimInter/Processor/sources/: CacheMemory.cpp  Instruction.cpp  InstructionList.cpp  InstructionMemory.cpp  Interconnect.cpp  List.cpp  ListNode.cpp  Processor.cpp  ProcessorCache.cpp  ProcessorController.cpp  ProcessorRead.cpp  ProcessorWrite.cpp  SharedMemory.cpp
headers/: CacheMemory.h  Instruction.h  InstructionList.h  InstructionMemory.h  Interconnect.h  ListNode.h  Proccesor.h  Processor.h  ProcessorCache.h  ProcessorController.h  ProcessorRead.h  ProcessorWrite.h  SharedMemory.h
sources/: CacheMemory.cpp  Instruction.cpp  InstructionList.cpp  InstructionMemory.cpp  Interconnect.cpp  List.cpp  ListNode.cpp  Proccesor.cpp  ProccessorController.cpp  Processor.cpp  ProcessorCache.cpp  ProcessorController.cpp  ProcessorRead.cpp  ProcessorWrite.cpp  SharedMemory.cpp
